<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:padding="10dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="12dp"
        android:hint="@string/search"
        android:textColorHint="@color/colorSearchHint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/contactSearchEditTextId"
        android:background="@drawable/search_contact_background"/>

    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/contactSearchEditTextId"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/myProfileText"
                android:textColorHint="@color/colorContactHeadings"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/my_profile"/>

            <View
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/myProfileText"
                android:background="@drawable/line"
                android:layout_marginTop="8dp"
                android:id="@+id/myLine"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/Avatar"
                android:text="N"
                app:layout_constraintTop_toBottomOf="@id/myLine"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:id="@+id/myProfileImageAvatarId"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NORPHER AKINRINOLA"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="normal"
                android:id="@+id/myProfileNameId"
                app:layout_constraintLeft_toRightOf="@id/myProfileImageAvatarId"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/myLine"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:id="@+id/myProfileDescriptionId"
                app:layout_constraintLeft_toRightOf="@id/myProfileImageAvatarId"
                app:layout_constraintTop_toBottomOf="@id/myProfileNameId"
                android:layout_marginStart="20dp"
                android:text="@string/share_your_profile_and_view_images_from_your_contacts"
                android:textSize="16sp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_profile_text"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/colorPrimary"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/myProfileDescriptionId"
                android:layout_marginEnd="5dp"
                android:id="@+id/shareProfileButtonId"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:id="@+id/contactsHeadingId"
                app:layout_constraintTop_toBottomOf="@id/shareProfileButtonId"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/contactsRecyclerViewId"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/contactsHeadingId"
                android:background="@drawable/line"
                android:layout_marginTop="3dp"
                android:id="@+id/myLine2"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contactsRecyclerViewId"
                app:layout_constraintTop_toBottomOf="@id/myLine2"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No contacts yet!. Add one to get started!"
                android:textColor="@color/colorText"
                android:id="@+id/noContactsTextId"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/myLine2"
                android:layout_marginTop="30dp"
                app:layout_constraintVertical_bias="0.7"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        app:maxImageSize="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:id="@+id/addContactButtonId"
        android:layout_height="wrap_content"
        android:src="@drawable/add_contact"
        app:fabSize="auto"
        />

</android.support.constraint.ConstraintLayout>