<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style="@style/Avatar"
        android:text="A"
        android:id="@+id/contactAvatarId"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact Name"
        android:id="@+id/contactNameId"
        app:layout_constraintLeft_toRightOf="@id/contactAvatarId"
        android:textSize="22sp"
        android:textColor="@color/colorText"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/contactOptionsId"
        app:layout_constraintTop_toBottomOf="@id/contactAvatarId"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccordionBg"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:layout_height="wrap_content">

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:background="@drawable/phone"
           android:id="@+id/contactCallButtonId"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="17sp"
            app:layout_constraintHorizontal_bias=".1"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorText"
            app:layout_constraintTop_toBottomOf="@id/contactCallButtonId"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="17sp"
            android:textColor="@color/colorText"
            app:layout_constraintHorizontal_bias=".35"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/contactCallButtonId"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_call"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias=".66"
            android:textSize="17sp"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorText"
            app:layout_constraintTop_toBottomOf="@id/contactCallButtonId"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias=".95"
            android:layout_marginTop="2dp"
            android:textSize="17sp"
            android:textColor="@color/colorText"
            app:layout_constraintTop_toBottomOf="@id/contactCallButtonId"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/message"
            app:layout_constraintLeft_toRightOf="@id/contactCallButtonId"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/contactMessageButtonId"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/contactMessageButtonId"
            android:background="@drawable/video_call"
            android:id="@+id/contactVCallButtonId"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/contactVCallButtonId"
            android:background="@drawable/info"
            android:id="@+id/contactDetailsButtonId"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>